# elite-mev-bot

./: .env.example  .env.mev_example  .env.multidex  .gitignore  AUDIT_FIXES_IMPLEMENTED.md  BOT_INTEGRATION_COMPLETE.md  CLAUDE.md  COMPREHENSIVE_IMPROVEMENTS.md  Cargo.toml  Cargo.toml.backup  Cargo_full_deps.toml  Cargo_live_trading.toml  Cargo_production_fixed.toml  ELITE_MEV_BOT_V2_1_SUMMARY.md  ELITE_MEV_BOT_V2_1_ULTRA_SPEED_COMPLETE.md  ELITE_MEV_BOT_V2_SUMMARY.md  LIVE_TRADING_READY.md  MICROCAP_MEV_STRATEGY.md  MULTI_DEX_MEV_STRATEGY.md  PRODUCTION_READINESS_AUDIT.md  README.md  README_ELITE.md  SECURITY_AUDIT_FULL_REPORT.md  SECURITY_AUDIT_REPORT.md  SESSION_SUMMARY.md  SIMD_FILTERING_SUMMARY.md  TESTING_ROADMAP.md  ULTRA_SPEED_OPTIMIZATIONS.md  claw.md  codacy-results.json  comparison_analysis.md  comprehensive_speed_test.py  dashboard.html  final_comparison.py  grok_answer_20251110_043649.md  grok_answer_20251110_045423.md  grok_answer_20251110_055004.md  grok_answer_20251110_060509.md  live_readiness_verification.json  mev_bot_config.json  (+24 more)
.cargo/: config.toml
.github/workflows/: codacy-analysis.yml  codacy-autofix.yml
data/: mev_tracking_schema.sql
docs/: README.md
docs/current/: BACKRUNNING_IMPLEMENTATION_COMPLETE.md  BACKRUNNING_STRATEGY.md  BOT_SUMMARY.md  CLAUDE.md  DELAYED_SANDWICH_STRATEGY.md  DEPLOYMENT_SUMMARY.md  DEX_FEE_DOUBLE_COUNTING_ISSUE.md  DEX_PARSERS_COMPLETE.md  DYNAMIC_POSITION_SIZING_COMPLETE.md  GROK_COLLABORATION_POOL_EXTRACTION.md  JITO_DYNAMIC_TIPPING.md  LIVE_TRADING_STATUS.md  LOG_BLOAT_FIX.md  MEV_DASHBOARD_CREATED.md  MEV_DASHBOARD_DEPLOYMENT_SUMMARY.md  MEV_DATABASE_INTEGRATION_GUIDE.md  MEV_SANDWICH_DETECTION_IMPLEMENTED.md  MEV_SANDWICH_EXECUTION_STATUS.md  MEV_WALLET_SETUP.md  MULTI_DEX_INTEGRATION.md  MULTI_DEX_INTEGRATION_FIX.md  OPERATIONAL_STATUS_2025_11_08.md  POOL_EXTRACTION_DEBUG_SESSION_20251110.md  POOL_EXTRACTION_DEBUG_STATUS.md  (+7 more)
examples/: fee_calculation_example.rs
scripts/: check_mev_wallet.sh  deploy_for_live_trading.sh  launch_elite_mev.sh  rotate_logs.sh  start_mev_bot.sh  start_microcap_mev.sh  start_with_rotation.sh
sessions/: session_20251110_043649.json  session_20251110_045423.json  session_20251110_060509.json
src/: arbitrage_engine.rs  blocktime.rs  bot_coordinator.rs  config_cli.rs  constants.rs  database_tracker.rs  dex_parser.rs  dex_pool_state.rs  dex_registry.rs  dynamic_config_manager.rs  dynamic_fee_model.rs  dynamic_slippage.rs  error_recovery_manager.rs  intelligent_failover.rs  jito_bundle_client.rs  jito_bundle_manager.rs  jito_submitter.rs  jupiter_executor.rs  jupiter_rate_limiter.rs  lib.rs  liquidation_engine.rs  main.rs  market_cap_filter.rs  mempool_monitor.rs  meteora_dlmm_state.rs  meteora_dlmm_swap.rs  metrics_dashboard.rs  mev_database_tracker.rs  mev_sandwich_detector.rs  mev_sandwich_detector.rs.backup_nov9  microcap_filter.rs  migration_manager.rs  missing_modules.rs  monitoring_alerting.rs  optimized_shred_processor.rs  orca_whirlpool_state.rs  orca_whirlpool_swap.rs  pool_validator.rs  production_testing_framework.rs  pumpfun_executor.rs  (+24 more)
tests/: integration_tests.rs
wallets/: encrypted_wallets.json
(+4 files in other folders)
