[package]
name = "shared-bot-infrastructure"
version = "0.1.0"
description = "Elite MEV Bot v2.1 - Full Feature Set"
edition = "2021"
publish = false

[[bin]]
name = "mev_bot"
path = "src/bin/mev_bot.rs"

[[bin]]
name = "elite_mev_ultra_minimal"
path = "src/bin/elite_mev_ultra_minimal.rs"

[[bin]]
name = "elite_mev_bot_v2_1_production"
path = "src/bin/elite_mev_bot_v2_1_production.rs"

[[bin]]
name = "elite_mev_bot_v2_1_ultra_speed"
path = "src/bin/elite_mev_bot_v2_1_ultra_speed.rs"

[[bin]]
name = "shredstream_mev_bot"
path = "src/bin/shredstream_mev_bot.rs"

[[bin]]
name = "check_wallet_balance"
path = "src/bin/check_wallet_balance.rs"

[[bin]]
name = "test_shredstream_simple"
path = "src/bin/test_shredstream_simple.rs"

[[bin]]
name = "test_shredstream_basic"
path = "src/bin/test_shredstream_basic.rs"

[[bin]]
name = "test_shredstream_data"
path = "src/bin/test_shredstream_data.rs"

[[bin]]
name = "elite_mev_bot_v2_1_production_safe"
path = "src/bin/elite_mev_bot_v2_1_production_safe.rs"

[[bin]]
name = "test_real_shredstream_grpc"
path = "src/bin/test_real_shredstream_grpc.rs"

[dependencies]
# Core async runtime with all required features
tokio = { version = "1.21", features = ["rt-multi-thread", "macros", "time", "sync", "net", "fs"] }
anyhow = "1.0"
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

# Time handling
chrono = "0.4.26"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Lazy static initialization
once_cell = "1.19"

# Fast random numbers
fastrand = "2.0"

# Network client with gzip compression for RPC calls (70-90% size reduction)
reqwest = { version = "0.11", features = ["json", "gzip"] }

# System dependencies
libc = "0.2"

# Environment variables
dotenvy = "0.15"

# SIMD optimizations
simd-json = "0.13"

# Solana dependencies
solana-stream-sdk = "0.5.1"
solana-entry = "=2.2.1"
solana-rpc-client = "=2.2.1"
solana-sdk = "=2.2.1"
bs58 = "0.5"
hex = "0.4"
base64 = "0.21"
borsh = "0.10"  # For Borsh serialization (Solana transaction wire format)

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Async trait support
async-trait = "0.1"

# Parking lot for better performance
parking_lot = "0.12"

# WebSocket support
tokio-tungstenite = "0.20"

# UDP support for ShredStream
bytes = "1.6"

# Metrics
prometheus = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

# SPL Token support
spl-token = "6.0"

# Secure wallet management
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"

# CLI support
clap = { version = "4.0", features = ["derive"] }

# Missing dependencies
lru = "0.12"
log = "0.4"
env_logger = "0.10"
# spl-associated-token-account = "2.3"  # Version conflict - disabled for now

# Additional Solana dependencies for RPC types
solana-client = "=2.2.1"
solana-rpc-client-api = "=2.2.1"
solana-transaction-status = "=2.2.1"